Update design page colors and center problem statement headings

--- a/design/index.html
+++ b/design/index.html
@@ -335,7 +335,7 @@
             </a>
           </div>
 		  <div class="made-with-heart">
-			Made with <span style="color: red;">&hearts;</span> by Information Management Group
+			Made with <span style="color: #C9A227;">&hearts;</span> by Information Management Group
 		  </div>
         </div>
       </div>
