added footer svgs

--- a/about_us/index.html
+++ b/about_us/index.html
@@ -402,6 +402,10 @@
 			</div>
             </div>
         </div>
+        <img src="/assets/home2025/harp.svg" alt="Decorative column" class="footer-harp" />
+        <div class="footer-decoration">
+            <img src="/assets/home2025/footer.svg" alt="Footer decoration" class="footer-decoration-image" />
+        </div>
     </footer>
 </body>
 
