--- a/design/index.html
+++ b/design/index.html
@@ -339,6 +339,10 @@
 		  </div>
         </div>
       </div>
+
+      <div class="footer-decoration">
+        <img src="/assets/home2025/footer.svg" alt="Footer decoration" class="footer-decoration-image" />
+      </div>
     </footer>
   </body>
 </html>
