--- a/development/index.html
+++ b/development/index.html
@@ -254,7 +254,7 @@
         </div>
       </section>
     </main>
-    <footer class="site-footer">
+  <footer class="site-footer">
       <div class="site-container">
         <div class="site-footer-wrapper">
           <div class="sociallinks">
@@ -311,9 +311,13 @@
             </a>
           </div>
 		  <div class="made-with-heart">
-			  Made with <span style="color: red;">&hearts;</span> by Information Management Group
+			Made with <span style="color: red;">&hearts;</span> by Information Management Group
 		  </div>
         </div>
+      </div>
+
+      <div class="footer-decoration">
+        <img src="/assets/home2025/footer.svg" alt="Footer decoration" class="footer-decoration-image" />
       </div>
     </footer>
   </body>
