--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
     <footer class="site-footer">
       <div class="footer-content">
         <div class="footer-column-decoration">
-          <!-- <img src="/assets/home2025/harp.svg" alt="Greek Column" class="footer-column-image" /> -->
+          <img src="/assets/home2025/harp.svg" alt="Greek Column" class="footer-column-image home-footer-harp" />
         </div>
         <div class="footer-main">
           <div class="site-container">
@@ -595,10 +595,10 @@
           </div>
         </div>
       </div>
+      <div class="footer-decoration">
+        <img src="/assets/home2025/footer.svg" alt="Footer decoration" class="footer-decoration-image" />
+      </div>
     </footer>
-    <!-- <div class="footer-decoration">
-      <img src="/assets/home2025/footer.svg" alt="Footer Decoration" class="footer-decoration-image" />
-    </div> -->
   <div class="audio-button" onclick="toggleAudio()">
     <img id="audio-icon" src="/assets/play-fill.svg" alt="Play Audio" />
   </div>
