improve dev page

--- a/design/index.html
+++ b/design/index.html
@@ -210,7 +210,7 @@
       </div>
     </nav>
     <div id="overlay" onclick="hideOverlay()"></div>
-    <main class="development">
+    <main class="development design-page">
       <section class="page-heading-background">
         <h1 class="page-heading">
           <div class="heading-text">DESIGN PROBLEM STATEMENTS</div>
