--- a/development/index.html
+++ b/development/index.html
@@ -228,8 +228,7 @@
             <h2 class="card-title2">SECOND YEAR STUDENTS</h2>
       
             <p class="card-text2">
-              Choose between MindBridge, a digital wellbeing platform inspired by ancient spaces of reflection, or Clan Forge, a mobile social hub for competitive gaming. Pick the challenge that excites you and develop a full-featured application from concept to execution.              <br><br>
-              <strong>Deadline - 20 January, 2025 11:59 PM</strong>
+              Choose between two themed challenges and build a complete application. Start with the basics and expand your project as you learn and experiment.              <strong>Deadline - 20 January, 2025 11:59 PM</strong>
             </p>
       
             <a href="https://drive.google.com/file/d/1tgPSI9K05fR5LhYMqrQceXS2Kmq20Elx/view?usp=share_link"
