--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 </div>
                 <div class="event-description">
                   <div class="event-heading">Recruitment Talk</div>
-                  <div class="event-date">To be announced</div>
+                  <div class="event-date">22 January, 2026</div>
                 </div>
               </div>
               <div class="upper-event" event="4">
@@ -283,8 +283,8 @@
               </div>
             </div>
             <div class="middle-line">
-              <div class="compeleted"></div>
-              <div class="left"></div>
+              <div class="compeleted" style="width: 50%;"></div>
+              <div class="left" style="width: 50%;"></div>
             </div>
             <div class="lower-events">
               <div class="lower-event" event="1">
@@ -302,7 +302,7 @@
                 </div>
                 <div class="event-description">
                   <div class="event-heading">Recruitment Test</div>
-                  <div class="event-date">To be announced</div>
+                  <div class="event-date">15 February, 2026</div>
                 </div>
               </div>
               <div class="lower-event" event="5">
@@ -338,7 +338,7 @@
                 <div class="event-heading-mobile">
                   Recruitment Talk
                 </div>
-                <div class="event-date-mobile">To be announced</div>
+                <div class="event-date-mobile">22 January, 2026</div>
               </div>
             </div>
             <!-- <div class="event-ongoing"></div> -->
@@ -346,7 +346,7 @@
             <div>
               <div class="event-description-mobile">
                 <div class="event-heading-mobile">Recruitment Test</div>
-                <div class="event-date-mobile">To be announced</div>
+                <div class="event-date-mobile">15 February, 2026</div>
               </div>
             </div>
             <div class="event-connect"></div>
