Update link for Recruitment Assignment

--- a/design/index.html
+++ b/design/index.html
@@ -232,7 +232,7 @@
             </div>
             <div class="card-footer">
               <strong class="card-deadline">Deadline - 10 January, 2025 11:59 PM</strong>
-              <a href="https://www.notion.so/Winter-Assignment-1Y-Design-2c24810f2d178156a389dba44bfc7228?source=copy_link"
+              <a href="https://www.notion.so/Recruitment-Assignment-1Y-Design-2f3aa0bee6e3802fa8fac0620454443e?showMoveTo=true&saveParent=true"
                target="_blank" class="card-link1">
               View Problem Statement
             </a>
