--- a/design/index.html
+++ b/design/index.html
@@ -227,8 +227,7 @@
             </div>
             <div class="card-body">
             <p class="card-text1">
-                Design a guided conversational interface inspired by Athena that helps users frame clear prompts, follow conversation context, and easily understand structured AI responses.
-              </p>
+				Create a mythology-inspired digital experience that feels simple, welcoming, and premium, pulling users in with story-driven design and guiding them smoothly from curiosity to action.              </p>
             </div>
             <div class="card-footer">
               <strong class="card-deadline">Deadline - 10 January, 2025 11:59 PM</strong>
@@ -236,7 +235,7 @@
                target="_blank" class="card-link1">
               View Problem Statement
             </a>
-              <a href="https://channeli.in/forminator/forms/77/fill" target="_blank">
+              <a href="https://channeli.in/forminator/forms/82/fill" target="_blank">
               <button class="submit-button1">Participation Form</button>
             </a>
             </div>
@@ -251,16 +250,15 @@
             </div>
             <div class="card-body">
             <p class="card-text2">
-                Design an intuitive, data-driven mobile app inspired by Athena that transforms complex air-quality data into wise, actionable insights, guiding citizens toward cleaner routes and sustainable habits with strategy and foresight.
-              </p>
+				Create a mythology-inspired digital experience that feels simple, welcoming, and premium, pulling users in with story-driven design and guiding them smoothly from curiosity to action.              </p>
             </div>
             <div class="card-footer">
               <strong class="card-deadline">Deadline - 10 January, 2025 11:59 PM</strong>
-              <a href="https://www.notion.so/Recruitment-Assignment-2Y-Design-2c8380e0468881f0b70adbb4035b1b91?source=copy_link"
+              <a href="https://www.notion.so/Recruitment-Assignment-1Y-Design-2f3aa0bee6e3802fa8fac0620454443e?showMoveTo=true&saveParent=true"
                target="_blank" class="card-link2">
               View Problem Statement
             </a>
-              <a href="https://channeli.in/forminator/forms/77/fill" target="_blank">
+              <a href="https://channeli.in/forminator/forms/82/fill" target="_blank">
               <button class="submit-button2">Participation Form</button>
             </a>
             </div>
