--- a/design/index.html
+++ b/design/index.html
@@ -254,12 +254,10 @@
               <br><br>
               <strong>Deadline - 20 January, 2025 11:59 PM</strong>
               <br><br>
-              Even heroes need repairs.  
-              Your mission: ensure the system fuels itself,  
-              one payment at a time.
+              Create a digital experience that feels simple, welcoming, and premium, pulling users in with story-driven design and guiding them smoothly from curiosity to action.
             </p>
       
-            <a href="https://silver-grade-e96.notion.site/Recruitment-Assignment-2Y-Design-16140988c8c980869178e12db960cc08?pvs=4"
+            <a href="https://www.notion.so/Recruitment-Assignment-2Y-Design-2c8380e0468881f0b70adbb4035b1b91?source=copy_link"
                target="_blank" class="card-link2">
               View Problem Statement
             </a>
