Change project deadline
Updated the deadline for the project and added a new line for clarity.

--- a/design/index.html
+++ b/design/index.html
@@ -250,9 +250,8 @@
             </div>
             <div class="card-body">
             <p class="card-text2">
-              Create a digital experience that feels simple, welcoming, and premium, pulling users in with story-driven design and guiding them smoothly from curiosity to action.
-              <br><br>
-              <strong>Deadline - 20 January, 2025 11:59 PM</strong>
+				Create a digital experience that feels simple, welcoming, and premium, pulling users in with story-driven design and guiding them smoothly from curiosity to action.              <br><br>
+              <strong>Deadline - 7 February, 2026 11:59 PM</strong>
               <br><br>
             </p>
       
